Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1014

MGS with sys.timeout is ignored and if sys.timeout is changed its not synced across the file system.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.3.0, Lustre 2.4.0
    • Lustre 2.2.0, Lustre 2.3.0, Lustre 2.4.0
    • None
    • Any Lustre 2.X setup.
    • 3
    • 4478

      While testing Lustre master branch on our production system we ran into the issue of the timeout being incorrect on the MGS. This was causing the MGS to drop OSS and MDS connections. Also discovered if we changed the obd_timeout parameter anywhere to another value that value was never propagated to the rest of the system.

            laisiyao Lai Siyao
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: