LU-1014 mountconf: MGS should process sys parameters

MGS doesn't have llog config, and it doesn't follow normal target
setup procedure, so it needs a special way to process sys parameters
from on-disk mountdata. NB on-disk sys parameters for MGS cannot be
changed by `lctl conf_param ...`, but by `tunefs.lustre`.

Signed-off-by: Lai Siyao <laisiyao@whamcloud.com>
Change-Id: I62147dfff17f28c537d75652b49ed3582b0fa64c