lustre/include/obd_class.h
@@ -127,6 +127,8 @@ void *kuc_alloc(int payload_len, int transport, int type);
 void kuc_free(void *p, int payload_len);
 
 /* obd_config.c */
+struct lustre_cfg *class_sys_param2lcfg(struct lustre_cfg_bufs *bufs, char *sys,
+                                        char **ptr);
 int class_process_config(struct lustre_cfg *lcfg);
 int class_process_proc_param(char *prefix, struct lprocfs_vars *lvars,
                              struct lustre_cfg *lcfg, void *data);
